--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@quasar/extras": "^1.16.4",
     "axios": "^1.6.5",
+    "pdfmake": "^0.2.9",
     "pinia": "^2.1.7",
     "quasar": "^2.6.0",
     "vue": "^3.0.0",
