--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "dependencies": {
     "@quasar/extras": "^1.16.4",
     "axios": "^1.6.5",
+    "html2canvas": "^1.4.1",
+    "jspdf-autotable": "^3.8.2",
     "pdfmake": "^0.2.9",
     "pinia": "^2.1.7",
     "quasar": "^2.6.0",
