--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "exceljs": "^4.4.0",
     "html2canvas": "^1.4.1",
     "jspdf-autotable": "^3.8.2",
+    "morgan": "^1.10.0",
     "pdfmake": "^0.2.9",
     "pinia": "^2.1.7",
     "quasar": "^2.6.0",
